--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/dist/output.css">
     <link rel="stylesheet" href="./src/input.css">
 </head>
-<body class="bg-porcelain font w-full h-auto max-h-screen ">
+<body class="bg-porcelain font w-full h-auto max-h-screen">
     <header class="container ">
         <nav class="flex justify-between bg-white/70 backdrop-blur-md fixed w-full md:justify-around md:px-3">
             <div class="flex justify-center items-center ">
@@ -171,12 +171,11 @@
                 </div>
                 <h3 class="text-center text-black">Portfolio</h3>
                 <h1 class="text-center text-emerald-600 text-3xl mt-3">MY PROJECTS</h1>
-                <p class="text-center mt-5">The following demontrate the scope of my journey and proffessional competencies.</p>
-
+                <p class="text-center mt-5">The following demonstrate the scope of my journey and proffessional competencies.</p>
                 
             </div>
             <section class="">
-                <div class="container px-6 py-10 mx-auto">
+                <div class="container px-6 py-3 mx-auto">
             
                     <section class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 lg:grid-cols-2 xl:grid-cols-3">
                         <div class=" border border-emerald-500 rounded-lg shadow-xl hover:scale-110 transition-transform ">
@@ -1385,7 +1384,7 @@
 
     </section>
 
-<script>
+<script src="./index.js">
     const btn = document.getElementById("btn");
     const menu = document.querySelector(".menu");
 
