--- a/index.html
+++ b/index.html
@@ -1357,25 +1357,25 @@
                 <div>
                     <div class="flex items-center justify-center mb-6 gap-4">
                         <a aria-label="github"  href="https://github.com/M0nicah" class="ml-4">
-                        <div class="">
-                            <img src="https://img.icons8.com/sf-black/64/undefined/github.png" class="w-10 h-10"/>
-                        </div>
+                           <div class="">
+                              <img src="https://img.icons8.com/sf-black/64/undefined/github.png" class="w-10 h-10"/>
+                           </div>
                         </a>
                         <a href="https://twitter.com/m0nica">
-                        <div>
-                            <img src="https://img.icons8.com/fluency/48/000000/twitter.png" class="w-10 h-10"/>
-                        </div>
+                           <div>
+                              <img src="https://img.icons8.com/fluency/48/000000/twitter.png" class="w-10 h-10"/>
+                           </div>
                         </a>
                         <a href="mailto: monica.w.masae@gmail.com">
-                        <div>
-                            <img src="https://img.icons8.com/color/48/000000/gmail-new.png" class="w-9 h-9"/>
-                        </div>
+                           <div>
+                              <img src="https://img.icons8.com/color/48/000000/gmail-new.png" class="w-9 h-9"/>
+                           </div>
                         </a>
                         <a href="https://www.linkedin.com/in/monica-masae-7b77a41ba/">
-                            <div>
-                                <img src="https://img.icons8.com/color/48/000000/linkedin-2.png" class="w-10 h-10"/>
-                            </div>
-                            </a>
+                           <div>
+                              <img src="https://img.icons8.com/color/48/000000/linkedin-2.png" class="w-10 h-10"/>
+                           </div>
+                        </a>
                     </div>
                 </div>
             </footer>
@@ -1384,7 +1384,7 @@
 
     </section>
 
-<script src="./index.js">
+<script>
     const btn = document.getElementById("btn");
     const menu = document.querySelector(".menu");
 
