--- a/index.html
+++ b/index.html
@@ -473,80 +473,11 @@
                        </div>
                        <div class="w-full lg:w-1/2 xl:w-5/12 px-4">
                           <div class="bg-white relative rounded-lg p-8 sm:p-12 shadow-lg">
-                             <form>
-                                <div class="mb-6">
-                                   <input
-                                      type="text"
-                                      placeholder="Your Name"
-                                      class="
-                                      w-full
-                                      rounded
-                                      py-3
-                                      px-[14px]
-                                      text-body-color text-base
-                                      border border-[f0f0f0]
-                                      outline-none
-                                      focus-visible:shadow-none
-                                      focus:border-primary
-                                      "
-                                      />
-                                </div>
-                                <div class="mb-6">
-                                   <input
-                                      type="email"
-                                      placeholder="Your Email"
-                                      class="
-                                      w-full
-                                      rounded
-                                      py-3
-                                      px-[14px]
-                                      text-body-color text-base
-                                      border border-[f0f0f0]
-                                      outline-none
-                                      focus-visible:shadow-none
-                                      focus:border-primary
-                                      "
-                                      />
-                                </div>
-                                <div class="mb-6">
-                                   <textarea
-                                      rows="6"
-                                      placeholder="Your Message"
-                                      class="
-                                      w-full
-                                      rounded
-                                      py-3
-                                      px-[14px]
-                                      text-body-color text-base
-                                      border border-[f0f0f0]
-                                      resize-none
-                                      outline-none
-                                      focus-visible:shadow-none
-                                      focus:border-primary
-                                      "
-                                      ></textarea>
-                                </div>
-                                <div>
-                                   <a
-                                      type="submit"
-                                      class="
-                                      w-full
-                                      text-white
-                                      bg-emerald-500
-                                      rounded
-                                      border border-primary
-                                      p-3
-                                      transition
-                                      hover:bg-opacity-90
-                                      text-center
-                                      "
-                                      href="mailto: monica.w.masae@gmail.com"
-                                      >
-                                      
-                                   Send Message
-                                   </a>
-                                </div>
-                             </form>
+                           <div>
+                              <!-- Profile Image -->
+                              <img src="./image/IMG_9019.jpeg" alt="" srcset="">
+                           </div>
+                             
                              <div>
                                 <span class="absolute -top-10 -right-9 z-[-1]">
                                    <svg
